--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -37,7 +37,11 @@
                 <a href="#" class="secondary">Contact sales</a>
                 <a href="#" class="secondary">Log In</a>
                 <a href="#" class="button">Get Started</a>
-               
+            </div>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </header>
