--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -21,9 +21,9 @@
                 <div class="logo">
                     <img src="Assets/Laptop-view/asana-logo.png" alt="Asana Logo">
                 </div>
-                <nav>
+                <nav class="dropdown-menu">
                     <ul class="nav-links">
-                        <li><a href="#">Features <i class="fa fa-angle-down"></i></a></li>
+                        <li><a href="#">Features<i class="fa fa-angle-down"></i></a></li>
                         <li><a href="#">Solutions <i class="fa fa-angle-down"></i></a></li>
                         <li><a href="#">Resources <i class="fa fa-angle-down"></i></a></li>
                         <li><a href="#">Enterprise</a></li>
@@ -39,9 +39,7 @@
                 <a href="#" class="button">Get Started</a>
             </div>
             <div class="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
+                <i class="fa fa-bars"></i>
             </div>
         </div>
     </header>
