--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container1">
             <p>AI that works. Coming June 5, Asana redefines work management—again.</p>
-            <li><a href="#">Get early access  <i class="fa fa-long-arrow-right"></i></a></li>
+            <li class="diff-list1"><a href="#">Get early access  <i class="fa fa-long-arrow-right"></i></a></li>
             <li class="diff-list"><i class="fa fa-times"></i></li>
         </div>
         <div class="container">
