--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -1,57 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asana Header Replica</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Font-awesome-cdnjs -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <header>
-        <div class="container1">
-            <p>AI that works. Coming June 5, Asana redefines work management—again.</p>
-            <li class="diff-list1"><a href="#">Get early access  <i class="fa fa-long-arrow-right"></i></a></li>
-            <li class="diff-list"><i class="fa fa-times"></i></li>
+      <div class="container1">
+        <p>
+          AI that works. Coming June 5, Asana redefines work management—again.
+        </p>
+        <li class="diff-list1">
+          <a href="#"
+            >Get early access <i class="fa fa-long-arrow-right"></i
+          ></a>
+        </li>
+        <li class="diff-list"><i class="fa fa-times"></i></li>
+      </div>
+      <div class="container">
+        <div class="logo-link">
+          <div class="logo">
+            <img src="Assets/Laptop-view/asana-logo.png" alt="Asana Logo" />
+          </div>
+          <nav class="dropdown-menu">
+            <ul class="nav-links">
+              <li>
+                <a href="#">Features<i class="fa fa-angle-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Solutions <i class="fa fa-angle-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Resources <i class="fa fa-angle-down"></i></a>
+              </li>
+              <li><a href="#">Enterprise</a></li>
+              <li><a href="#">Pricing</a></li>
+            </ul>
+          </nav>
         </div>
-        <div class="container">
-            <div class="logo-link">
-                <div class="logo">
-                    <img src="Assets/Laptop-view/asana-logo.png" alt="Asana Logo">
-                </div>
-                <nav class="dropdown-menu">
-                    <ul class="nav-links">
-                        <li><a href="#">Features<i class="fa fa-angle-down"></i></a></li>
-                        <li><a href="#">Solutions <i class="fa fa-angle-down"></i></a></li>
-                        <li><a href="#">Resources <i class="fa fa-angle-down"></i></a></li>
-                        <li><a href="#">Enterprise</a></li>
-                        <li><a href="#">Pricing</a></li>
-                    </ul>
-                </nav>
-            </div>
-          
-            <div class="user-actions">
-                <a href="#" class="secondary"><i class="fa fa-globe"></i></a>
-                <a href="#" class="secondary">Contact sales</a>
-                <a href="#" class="secondary">Log In</a>
-                <a href="#" class="button">Get Started</a>
-            </div>
-            <div class="menu-toggle">
-                <i class="fa fa-bars"></i>
-            </div>
+
+        <div class="user-actions">
+          <a href="#" class="secondary"><i class="fa fa-globe"></i></a>
+          <a href="#" class="secondary">Contact sales</a>
+          <a href="#" class="secondary">Log In</a>
+          <a href="#" class="button">Get Started</a>
         </div>
+        <div class="menu-toggle">
+          <i class="fa fa-bars"></i>
+        </div>
+      </div>
     </header>
 
     <div class="content">
-        <!-- Your page content goes here -->
+      <div class="product-launch-plan">
+        <div class="launch-plan-text">
+          <h2>A smarter way to work</h2>
+          <p>
+            With Asana, you can drive clarity and impact at scale by connecting
+            work and<br />
+            workflows to company-wide goals.
+          </p>
+          <div class="launch-plan-btn">
+            <button class="launch-plan-btn1">Get started</button>
+          <button class="launch-plan-btn2">See how it works</button>
+          </div>
+          
+        </div>
+        <div class="launch-plan-img">
+          <img src="Assets/Laptop-view/Product-launch-plan.png" alt="" />
+        </div>
+      </div>
     </div>
 
     <footer>
-        <!-- Your footer content goes here -->
+      <!-- Your footer content goes here -->
     </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
