--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -81,6 +81,20 @@
           <img src="Assets/Laptop-view/Product-launch-plan.png" alt="" />
         </div>
       </div>
+      <div class="fortune">
+        <h4>85% of Fortune 100 companies choose Asana¹</h4>
+        <div class="fortune-img">
+            <img src="Assets/Laptop-view/Amazon-logo.png" alt="">
+            <img src="Assets/Laptop-view/Mckesson-logo.png" alt="">
+            <img src="Assets/Laptop-view/Johnson-logo.png" alt="">
+            <img src="Assets/Laptop-view/Dell-logo.png" alt="">
+            <img src="Assets/Laptop-view/Merck-logo.png" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="different-department">
+        <div class=""></div>
     </div>
 
     <footer>
