--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -94,7 +94,26 @@
     </div>
 
     <div class="different-department">
-        <div class=""></div>
+        <div class="department-asana">
+            <h3>See how different departments use <br> Asana</h3>
+            <div class="department-asana-btn">
+                <button class="active">Marketing</button>
+                <button>Operations</button>
+                <button>It</button>
+                <button>Product</button>
+                <button>Company-wide</button>
+            </div>
+            <div class="department-asana-launch">
+                <img src="Assets/Laptop-view/Marketing-campaign.png" alt="">
+                <div class="department-asana-text">
+                    <h4>Meet campaign goals</h6>
+                    <p>Streamline campaign management</p>
+                    <p>Enhance creative production</p>
+                    <p>Manage events and editorial calendars</p>
+                    <button>Explore marketing</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer>
