--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -95,7 +95,8 @@
 
     <div class="different-department">
         <div class="department-asana">
-            <h3>See how different departments use <br> Asana</h3>
+            <h3>See how different departments use Asana</h3>
+            <input type="text">
             <div class="department-asana-btn">
                 <button class="active">Marketing</button>
                 <button>Operations</button>
