--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -96,7 +96,16 @@
     <div class="different-department">
         <div class="department-asana">
             <h3>See how different departments use Asana</h3>
-            <input type="text">
+            <form>
+                <select id="depart">
+                    <option></option>
+                    <option>Marketing</option>
+                    <option>Operations</option>
+                    <option>It</option>
+                    <option>Product</option>
+                    <option>Company-wide</option>
+                </select>
+            </form>
             <div class="department-asana-btn">
                 <button class="active">Marketing</button>
                 <button>Operations</button>
