--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -116,12 +116,27 @@
             <div class="department-asana-launch">
                 <img src="Assets/Laptop-view/Marketing-campaign.png" alt="">
                 <div class="department-asana-text">
-                    <h4>Meet campaign goals</h6>
+                    <h4>Meet campaign goals</h4>
                     <p>Streamline campaign management</p>
                     <p>Enhance creative production</p>
                     <p>Manage events and editorial calendars</p>
                     <button>Explore marketing</button>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="con-asana-apart">
+        <div class="asana-apart department-asana">
+            <h3>What sets Asana apart</h3>
+            <div class="department-asana-launch asana-apart-launch">
+                <div class="asana-apart-text">
+                    <h4>More clarity and accountability</h4>
+                    <p>Connect strategic goals to the teams that help achieve them. See progress in
+                        real time, update stakeholders, and keep the company on track.</p>
+                    <button>Learn about goals</button>
+                </div>
+                <img src="Assets/Laptop-view/Goal-on-track.png" alt=""> 
             </div>
         </div>
     </div>
