--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -139,6 +139,20 @@
                 <img src="Assets/Laptop-view/Goal-on-track.png" alt=""> 
             </div>
         </div>
+
+        <div class="asana-apart department-asana">
+            <h3>What sets Asana apart</h3>
+            <div class="department-asana-launch asana-apart-launch">
+                <div class="asana-apart-text">
+                    <h4>Greater impact with AI</h4>
+                    <p>AI has joined the team to help every organization work smarter. Drive greater
+                        clarity, impact, and scale with Asana Intelligence, powered by the Work
+                        Graph®.</p>
+                    <button>Meet Asana Intelligence</button>
+                </div>
+                <img src="Assets/Laptop-view/Asana-intelligence.png" alt=""> 
+            </div>
+        </div>
     </div>
 
     <footer>
