--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -155,6 +155,18 @@
         </div>
     </div>
 
+    <div class="security">
+        <h1>A smarter way to scale</h1>
+        <div class="department-asana-launch asana-apart-launch security-grade">
+            <div class="asana-apart-text security-grade-text">
+                <h4>Enterprise-grade security</h4>
+                <p>Ensure your company's data is completely secure and that you're in compliance with the latest standards.</p>
+                <button>Explore security</button>
+            </div>
+            <img src="Assets/Laptop-view/home24-security.png" alt="">
+        </div>
+    </div>
+
     <footer>
       <!-- Your footer content goes here -->
     </footer>
