--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -157,7 +157,7 @@
 
     <div class="security">
         <h1>A smarter way to scale</h1>
-        <div class="department-asana-launch asana-apart-launch security-grade">
+        <div class="department-asana-launch security-grade">
             <div class="asana-apart-text security-grade-text">
                 <h4>Enterprise-grade security</h4>
                 <p>Ensure your company's data is completely secure and that you're in compliance with the latest standards.</p>
@@ -165,7 +165,23 @@
             </div>
             <img src="Assets/Laptop-view/home24-security.png" alt="">
         </div>
+
+        <div class="security1 connect-integration">
+            <div class="department-asana-launch connect-integration-cov">
+                <img src="Assets/Laptop-view/Connect-over-integrations.png" alt="">
+                <div class="department-asana-text security-grade-text connect-integration-text">
+                    <h4>Connect over 300 integrations</h4>
+                    <p>Asana connects with the enterprise tools your organization already uses, right out of the box.</p>
+                    <button>See all integrations</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+  
+
 
     <footer>
       <!-- Your footer content goes here -->
