--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -1,96 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asana Header Replica</title>
     <link rel="stylesheet" href="styles.css" />
 
     <!-- Font-awesome-cdnjs -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="container1">
-        <p>
-          AI that works. Coming June 5, Asana redefines work management—again.
-        </p>
-        <li class="diff-list1">
-          <a href="#"
-            >Get early access <i class="fa fa-long-arrow-right"></i
-          ></a>
-        </li>
-        <li class="diff-list"><i class="fa fa-times"></i></li>
-      </div>
-      <div class="container">
-        <div class="logo-link">
-          <div class="logo">
-            <img src="Assets/Laptop-view/asana-logo.png" alt="Asana Logo" />
-          </div>
-          <nav class="dropdown-menu">
-            <ul class="nav-links">
-              <li>
-                <a href="#">Features<i class="fa fa-angle-down"></i></a>
-              </li>
-              <li>
-                <a href="#">Solutions <i class="fa fa-angle-down"></i></a>
-              </li>
-              <li>
-                <a href="#">Resources <i class="fa fa-angle-down"></i></a>
-              </li>
-              <li><a href="#">Enterprise</a></li>
-              <li><a href="#">Pricing</a></li>
-            </ul>
-          </nav>
-        </div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-        <div class="user-actions">
-          <a href="#" class="secondary"><i class="fa fa-globe"></i></a>
-          <a href="#" class="secondary">Contact sales</a>
-          <a href="#" class="secondary">Log In</a>
-          <a href="#" class="button">Get Started</a>
+<body>
+    <header>
+        <div class="container1">
+            <p>
+                AI that works. Coming June 5, Asana redefines work management—again.
+            </p>
+            <li class="diff-list1">
+                <a href="#">Get early access <i class="fa fa-long-arrow-right"></i></a>
+            </li>
+            <li class="diff-list"><i class="fa fa-times"></i></li>
         </div>
-        <div class="menu-toggle">
-          <i class="fa fa-bars"></i>
+        <div class="container">
+            <div class="logo-link">
+                <div class="logo">
+                    <img src="Assets/Laptop-view/asana-logo.png" alt="Asana Logo" />
+                </div>
+                <nav class="dropdown-menu">
+                    <ul class="nav-links">
+                        <li>
+                            <a href="#">Features<i class="fa fa-angle-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">Solutions <i class="fa fa-angle-down"></i></a>
+                        </li>
+                        <li>
+                            <a href="#">Resources <i class="fa fa-angle-down"></i></a>
+                        </li>
+                        <li><a href="#">Enterprise</a></li>
+                        <li><a href="#">Pricing</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="user-actions">
+                <a href="#" class="secondary"><i class="fa fa-globe"></i></a>
+                <a href="#" class="secondary">Contact sales</a>
+                <a href="#" class="secondary">Log In</a>
+                <a href="#" class="button">Get Started</a>
+            </div>
+            <div class="menu-toggle">
+                <i class="fa fa-bars"></i>
+            </div>
         </div>
-      </div>
     </header>
 
     <div class="content">
-      <div class="product-launch-plan">
-        <div class="launch-plan-text">
-          <h2>A smarter way to work</h2>
-          <p>
-            With Asana, you can drive clarity and impact at scale by connecting
-            work and<br />
-            workflows to company-wide goals.
-          </p>
-          <div class="launch-plan-btn">
-            <button class="launch-plan-btn1">Get started</button>
-          <button class="launch-plan-btn2">See how it works</button>
-          </div>
-          
+        <div class="product-launch-plan">
+            <div class="launch-plan-text">
+                <h2>A smarter way to work</h2>
+                <p>
+                    With Asana, you can drive clarity and impact at scale by connecting
+                    work and<br />
+                    workflows to company-wide goals.
+                </p>
+                <div class="launch-plan-btn">
+                    <button class="launch-plan-btn1">Get started</button>
+                    <button class="launch-plan-btn2">See how it works</button>
+                </div>
+
+            </div>
+            <div class="launch-plan-img">
+                <img src="Assets/Laptop-view/Product-launch-plan.png" alt="" />
+            </div>
         </div>
-        <div class="launch-plan-img">
-          <img src="Assets/Laptop-view/Product-launch-plan.png" alt="" />
+        <div class="fortune">
+            <h4>85% of Fortune 100 companies choose Asana¹</h4>
+            <div class="fortune-img">
+                <img src="Assets/Laptop-view/Amazon-logo.png" alt="">
+                <img src="Assets/Laptop-view/Mckesson-logo.png" alt="">
+                <img src="Assets/Laptop-view/Johnson-logo.png" alt="">
+                <img src="Assets/Laptop-view/Dell-logo.png" alt="">
+                <img src="Assets/Laptop-view/Merck-logo.png" alt="">
+            </div>
         </div>
-      </div>
-      <div class="fortune">
-        <h4>85% of Fortune 100 companies choose Asana¹</h4>
-        <div class="fortune-img">
-            <img src="Assets/Laptop-view/Amazon-logo.png" alt="">
-            <img src="Assets/Laptop-view/Mckesson-logo.png" alt="">
-            <img src="Assets/Laptop-view/Johnson-logo.png" alt="">
-            <img src="Assets/Laptop-view/Dell-logo.png" alt="">
-            <img src="Assets/Laptop-view/Merck-logo.png" alt="">
-        </div>
-      </div>
     </div>
 
     <div class="different-department">
@@ -136,7 +132,7 @@
                         real time, update stakeholders, and keep the company on track.</p>
                     <button>Learn about goals</button>
                 </div>
-                <img src="Assets/Laptop-view/Goal-on-track.png" alt=""> 
+                <img src="Assets/Laptop-view/Goal-on-track.png" alt="">
             </div>
         </div>
 
@@ -150,7 +146,7 @@
                         Graph®.</p>
                     <button>Meet Asana Intelligence</button>
                 </div>
-                <img src="Assets/Laptop-view/Asana-intelligence.png" alt=""> 
+                <img src="Assets/Laptop-view/Asana-intelligence.png" alt="">
             </div>
         </div>
     </div>
@@ -160,19 +156,54 @@
         <div class="department-asana-launch security-grade">
             <div class="asana-apart-text security-grade-text">
                 <h4>Enterprise-grade security</h4>
-                <p>Ensure your company's data is completely secure and that you're in compliance with the latest standards.</p>
+                <p>Ensure your company's data is completely secure and that you're in compliance with the latest
+                    standards.</p>
                 <button>Explore security</button>
             </div>
             <img src="Assets/Laptop-view/home24-security.png" alt="">
         </div>
     </div>
-  
 
+    <div class="security">
+        <div class="department-asana-launch Connect-integrations">
+            <div class="integrations-contain">
+                <img src="Assets/Laptop-view/Connect-over-integrations.png" alt="">
+                <div class="integrations-texts">
+                    <h3>Connect over 300 integrations</h3>
+                    <p>Asana connects with the enterprise tools your
+                        organization already uses, right out of the box.</p>
+                    <button>See all integrations</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <section class="clients">
+        <div class="container">
+            <div class="client">
+                <h2>Overstock</h2>
+                <p>Overstock manages hundreds of partner relationships with Asana.</p>
+            </div>
+            <div class="client">
+                <h2>Hubspot</h2>
+                <p>Increased production of advertising campaigns for clients by 50% each month.</p>
+            </div>
+            <div class="client">
+                <h2>Figma</h2>
+                <p>Figma's product team reduced meeting time by 50% with Asana.</p>
+            </div>
+            <div class="client">
+                <h2>Sony Music</h2>
+                <p>Sony Music boosted their creative production capacity by 4x with Asana.</p>
+            </div>
+        </div>
+    </section> -->
 
     <footer>
-      <!-- Your footer content goes here -->
+        <!-- Your footer content goes here -->
     </footer>
 
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
