--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -178,7 +178,31 @@
         </div>
     </div>
 
-
+    <div class="cont">
+        <div class="card-container">
+            <div class="card">
+            <img src="Assets/Laptop-view/Overstock.png" alt="">
+            <div class="card-content"> 
+                <h3>Overstock</h3>
+                <p>Overstock manages hundreds of partner relationships with Asana.</p>
+             </div>
+            </div>
+            <div class="card">
+                <img src="Assets/Laptop-view/Hubspot.png" alt="">
+                <div class="card-content"> 
+                    <h3>Hubspot</h3>
+                    <p>Increased production of advertising campaigns for clients by 50% each month.</p>
+                 </div>
+                </div>
+                <div class="card">
+                    <img src="Assets/Laptop-view/Figma.png" alt="">
+                    <div class="card-content"> 
+                        <h3>Figma</h3>
+                        <p>Figma's product team reduced meeting time by 50% with Asana.</p>
+                     </div>
+                    </div>
+                </div>
+    </div>
 
     <footer>
         <!-- Your footer content goes here -->
