--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -179,6 +179,8 @@
     </div>
 
     <div class="cont">
+        <h1>The world’s top companies trust Asana</h1>
+        <p class="para">See all case studies <i class="fa-long-arrow-right"></i></p>
         <div class="card-container">
             <div class="card">
             <img src="Assets/Laptop-view/Overstock.png" alt="">
