--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -71,7 +71,6 @@
                     <button class="launch-plan-btn1">Get started</button>
                     <button class="launch-plan-btn2">See how it works</button>
                 </div>
-
             </div>
             <div class="launch-plan-img">
                 <img src="Assets/Laptop-view/Product-launch-plan.png" alt="" />
@@ -80,11 +79,11 @@
         <div class="fortune">
             <h4>85% of Fortune 100 companies choose Asana¹</h4>
             <div class="fortune-img">
-                <img src="Assets/Laptop-view/Amazon-logo.png" alt="">
-                <img src="Assets/Laptop-view/Mckesson-logo.png" alt="">
-                <img src="Assets/Laptop-view/Johnson-logo.png" alt="">
-                <img src="Assets/Laptop-view/Dell-logo.png" alt="">
-                <img src="Assets/Laptop-view/Merck-logo.png" alt="">
+                <img src="Assets/Laptop-view/Amazon-logo.png" alt="" />
+                <img src="Assets/Laptop-view/Mckesson-logo.png" alt="" />
+                <img src="Assets/Laptop-view/Johnson-logo.png" alt="" />
+                <img src="Assets/Laptop-view/Dell-logo.png" alt="" />
+                <img src="Assets/Laptop-view/Merck-logo.png" alt="" />
             </div>
         </div>
     </div>
@@ -110,7 +109,7 @@
                 <button>Company-wide</button>
             </div>
             <div class="department-asana-launch">
-                <img src="Assets/Laptop-view/Marketing-campaign.png" alt="">
+                <img src="Assets/Laptop-view/Marketing-campaign.png" alt="" />
                 <div class="department-asana-text">
                     <h4>Meet campaign goals</h4>
                     <p>Streamline campaign management</p>
@@ -128,11 +127,14 @@
             <div class="department-asana-launch asana-apart-launch">
                 <div class="asana-apart-text">
                     <h4>More clarity and accountability</h4>
-                    <p>Connect strategic goals to the teams that help achieve them. See progress in
-                        real time, update stakeholders, and keep the company on track.</p>
+                    <p>
+                        Connect strategic goals to the teams that help achieve them. See
+                        progress in real time, update stakeholders, and keep the company
+                        on track.
+                    </p>
                     <button>Learn about goals</button>
                 </div>
-                <img src="Assets/Laptop-view/Goal-on-track.png" alt="">
+                <img src="Assets/Laptop-view/Goal-on-track.png" alt="" />
             </div>
         </div>
 
@@ -141,12 +143,14 @@
             <div class="department-asana-launch asana-apart-launch">
                 <div class="asana-apart-text">
                     <h4>Greater impact with AI</h4>
-                    <p>AI has joined the team to help every organization work smarter. Drive greater
-                        clarity, impact, and scale with Asana Intelligence, powered by the Work
-                        Graph®.</p>
+                    <p>
+                        AI has joined the team to help every organization work smarter.
+                        Drive greater clarity, impact, and scale with Asana Intelligence,
+                        powered by the Work Graph®.
+                    </p>
                     <button>Meet Asana Intelligence</button>
                 </div>
-                <img src="Assets/Laptop-view/Asana-intelligence.png" alt="">
+                <img src="Assets/Laptop-view/Asana-intelligence.png" alt="" />
             </div>
         </div>
     </div>
@@ -156,22 +160,26 @@
         <div class="department-asana-launch security-grade">
             <div class="asana-apart-text security-grade-text">
                 <h4>Enterprise-grade security</h4>
-                <p>Ensure your company's data is completely secure and that you're in compliance with the latest
-                    standards.</p>
+                <p>
+                    Ensure your company's data is completely secure and that you're in
+                    compliance with the latest standards.
+                </p>
                 <button>Explore security</button>
             </div>
-            <img src="Assets/Laptop-view/home24-security.png" alt="">
+            <img src="Assets/Laptop-view/home24-security.png" alt="" />
         </div>
     </div>
 
     <div class="security">
         <div class="department-asana-launch Connect-integrations">
             <div class="integrations-contain">
-                <img src="Assets/Laptop-view/Connect-over-integrations.png" alt="">
+                <img src="Assets/Laptop-view/Connect-over-integrations.png" alt="" />
                 <div class="integrations-texts">
                     <h3>Connect over 300 integrations</h3>
-                    <p>Asana connects with the enterprise tools your
-                        organization already uses, right out of the box.</p>
+                    <p>
+                        Asana connects with the enterprise tools your organization already
+                        uses, right out of the box.
+                    </p>
                     <button>See all integrations</button>
                 </div>
             </div>
@@ -180,40 +188,77 @@
 
     <div class="cont">
         <h1>The world’s top companies trust Asana</h1>
-        <p class="para">See all case studies <i class="fa fa-long-arrow-right"></i></p>
+        <p class="para">
+            See all case studies <i class="fa fa-long-arrow-right"></i>
+        </p>
         <div class="card-container">
             <div class="card">
-            <img src="Assets/Laptop-view/Overstock.png" alt="">
-            <div class="card-content"> 
-                <h3>Overstock</h3>
-                <p>Overstock manages hundreds of partner relationships with Asana.</p>
-             </div>
+                <img src="Assets/Laptop-view/Overstock.png" alt="" />
+                <div class="card-content">
+                    <h3>Overstock</h3>
+                    <p>
+                        Overstock manages hundreds of partner relationships with Asana.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="Assets/Laptop-view/Hubspot.png" alt="">
-                <div class="card-content"> 
+                <img src="Assets/Laptop-view/Hubspot.png" alt="" />
+                <div class="card-content">
                     <h3>Hubspot</h3>
-                    <p>Increased production of advertising campaigns for clients by 50% each month.</p>
-                 </div>
+                    <p>
+                        Increased production of advertising campaigns for clients by 50%
+                        each month.
+                    </p>
                 </div>
-                <div class="card">
-                    <img src="Assets/Laptop-view/Figma.png" alt="">
-                    <div class="card-content"> 
-                        <h3>Figma</h3>
-                        <p>Figma's product team reduced meeting time by 50% with Asana.</p>
-                     </div>
-                    </div>
-                    <div class="card">
-                        <img src="Assets/Laptop-view/Figma.png" alt="">
-                        <div class="card-content"> 
-                            <h3>Figma</h3>
-                            <p>Figma's product team reduced meeting time by 50% with Asana.</p>
-                         </div>
-                        </div>
+            </div>
+            <div class="card">
+                <img src="Assets/Laptop-view/Figma.png" alt="" />
+                <div class="card-content">
+                    <h3>Figma</h3>
+                    <p>Figma's product team reduced meeting time by 50% with Asana.</p>
                 </div>
+            </div>
+            <div class="card">
+                <img src="Assets/Laptop-view/Figma.png" alt="" />
+                <div class="card-content">
+                    <h3>Figma</h3>
+                    <p>Figma's product team reduced meeting time by 50% with Asana.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
-    
+    <div class="start-easily">
+        <div class="start-container">
+            <h1>Get started easily</h1>
+            <div class="start-cards">
+                <div class="easy-card">
+                    <img src="Assets/Laptop-view/Aana-in action.png" alt="" />
+                    <div class="easy-content">
+                        <h3>See Asana in action</h3>
+                        <p>View demo <i class="fa fa-long-arrow-right"></i></p>
+                    </div>
+                </div>
+
+
+                <div class="easy-card">
+                    <img src="Assets/Laptop-view/Discover-resources.png" alt="" />
+                    <div class="easy-content">
+                        <h3>Discover resources</h3>
+                        <p>Visit our Resources Hub <i class="fa fa-long-arrow-right"></i></p>
+                    </div>
+                </div>
+
+                <div class="easy-card">
+                    <img src="Assets/Laptop-view/Start-template.png" alt="" />
+                    <div class="easy-content">
+                        <h3>Start with a template</h3>
+                        <p>View templates<i class="fa fa-long-arrow-right"></i></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <!-- Your footer content goes here -->
