--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -260,6 +260,43 @@
         </div>
     </div>
 
+    <div class="start-easily">
+        <div class="start-container">
+            <h1>Recognized as a leader by top analyst firms</h1>
+            <div class="start-cards">
+                <div class="easy-card">
+                    <img src="Assets/Laptop-view/Gartner.png" alt="" />
+                    <div class="easy-content con-p">
+                        <p>A Leader in the Gartner Magic Quadrant for<br> Collaborative Work Management²</p>
+                    </div>
+                </div>
+
+
+                <div class="easy-card">
+                    <img src="Assets/Laptop-view/Forrester.png" alt="" />
+                    <div class="easy-content con-p">
+                        <p>A Leader in the The Forrester Wave™: Collaborative<br> Work Management Tools Report³</p>
+                    </div>
+                </div>
+
+                <div class="easy-card">
+                    <img src="Assets/Laptop-view/IDC.png" alt="" />
+                    <div class="easy-content con-p">
+                        <p>A Leader in the IDC MarketScape: Worldwide<br> Collaborative Work Management Vendor<br>
+                            Assessment⁴</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="under-text">
+                <h1>The only platform that can support your
+                    company at any scale</h1>
+                    <button>Get started</button>
+        </div>
+    </div>
+
+
+
     <footer>
         <!-- Your footer content goes here -->
     </footer>
