--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -296,9 +296,15 @@
     </div>
 
 
-
     <footer>
-        <!-- Your footer content goes here -->
+        <div class="fore-footer">
+            <div class="fore-text">
+                <p>1. Accurate as of December 2023, includes free and paid users.</p>
+                <p>2. See the <a href="#">2023 Gartner® Magic Quadrant™ for Collaborative Work Management (CWM)</a>. GARTNER is a registered trademark and service mark of Gartner, Inc. and/or its affiliates in the U.S. and internationally, MAGIC QUADRANT and PEER INSIGHTS are registered trademarks and The GARTNER PEER INSIGHTS CUSTOMERS’ CHOICE badge is a trademark and service mark of Gartner, Inc. and/or its affiliates and is used herein with permission. All rights reserved.</p>
+                <p>3. See <a href="#">The Forrester Wave™: Collaborative Work Management Tools, Q4 2022 report</a>. The Forrester Wave: Collaborative Work Management Tools, Q4 2022. The Forrester Wave is copyrighted by Forrester Research, Inc. Forrester and Forrester Wave are trademarks of Forrester Research, Inc. The Forrester Wave is a graphical representation of Forrester’s call on a market and is plotted using a detailed spreadsheet with exposed scores, weightings, and comments. Forrester does not endorse any vendor, product, or service depicted in the Forrester Wave. Information is based on best available resources. Opinions reflect judgment at the time and are subject to change.</p>
+                <p>4. IDC MarketScape: Worldwide Collaborative Work Management 2023–2024 Vendor Assessment — Uniting Teams, Data, and AI for Flexible Work, Doc #US49434923, December 2023</p>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
