--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -305,6 +305,8 @@
                 <p>4. IDC MarketScape: Worldwide Collaborative Work Management 2023–2024 Vendor Assessment — Uniting Teams, Data, and AI for Flexible Work, Doc #US49434923, December 2023</p>
             </div>
         </div>
+
+        <div class="main-footer"></div>
     </footer>
 
     <script src="script.js"></script>
