--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -306,7 +306,80 @@
             </div>
         </div>
 
-        <div class="main-footer"></div>
+        <div class="main-footer">
+            <div class="footer-links">
+                <p><img src="Assets/Laptop-view/Asana_footer-link.png" alt=""></p>
+            </div>
+            <div class="footer-links">
+                <p>Asana</p>
+                <a href="#">Home</a>
+                <a href="#">Product</a>
+                <a href="#">What's New</a>
+                <a href="#">Pricing</a>
+                <a href="#">Starter</a>
+                <a href="#">Advanced</a>
+                <a href="#">Enterprise</a>
+                <a href="#">Customer Success</a>
+                <a href="#">Asana Templates</a>
+                <a href="#">Trust & Security</a>
+                <a href="#">Status</a>
+            </div>
+            <div class="footer-links">
+                <p>About Us</p>
+                <a href="#">Company</a>
+                <a href="#">Leadership</a>
+                <a href="#">Customers</a>
+                <a href="#">Diversity</a>
+                <a href="#">Careers</a>
+                <a href="#">Press</a>
+                <a href="#">Wavelength</a>
+                <a href="#">Inside Asana</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Sitemap</a>
+                <a href="#">Modern Slavery<br>Transparency Statement</a>
+            </div>
+            <div class="footer-links">
+                <p>Workflow Solutions</p>
+                <a href="#">Project Management</a>
+                <a href="#">Goal Management</a>
+                <a href="#">Agile Management</a>
+                <a href="#">Task Management</a>
+                <a href="#">Increase Productivity</a>
+                <a href="#">Work Management</a>
+                <a href="#">Project Planning</a>
+                <a href="#">To Do Lists</a>
+                <a href="#">See All Uses</a>
+                <a href="#">See All Teams</a>
+            </div>
+            <div class="footer-links">
+                <p>Resources</p>
+                <a href="#">Help Center</a>
+                <a href="#">Forum</a>
+                <a href="#">Support</a>
+                <a href="#">App Directory</a>
+                <a href="#">Developers & API</a>
+                <a href="#">Partners</a>
+                <a href="#">Asana Community</a>
+                <a href="#">Events</a>
+                <a href="#">Asana for Nonprofits</a>
+                <a href="#">Asana for Education</a>
+                <a href="#">Accessibility</a>
+            </div>
+            <div class="footer-links">
+                <p>Learn</p>
+                <a href="#">11 Leadership Styles</a>
+                <a href="#">110 Icebreaker Questions</a>
+                <a href="#">Executive Summary Tips</a>
+                <a href="#">Impostor Syndrome Tips</a>
+                <a href="#">Prevent Team Burnout</a>
+                <a href="#">SWOT Analysis Tips</a>
+                <a href="#">What are OKRs?</a>
+                <a href="#">What are SMART Goals?</a>
+                <a href="#">What is Scope Creep?</a>
+                <a href="#">See All resources</a>
+            </div>
+            
+        </div>
     </footer>
 
     <script src="script.js"></script>
