--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -307,6 +307,7 @@
         </div>
 
         <div class="main-footer">
+            <div class="main-foot">
             <div class="footer-links">
                 <p><img src="Assets/Laptop-view/Asana_footer-link.png" alt=""></p>
             </div>
@@ -378,8 +379,10 @@
                 <a href="#">What is Scope Creep?</a>
                 <a href="#">See All resources</a>
             </div>
-            
         </div>
+        </div>
+
+        <div class="finish-footer"></div>
     </footer>
 
     <script src="script.js"></script>
