--- a/Asana-Landing-Page/index.html
+++ b/Asana-Landing-Page/index.html
@@ -382,7 +382,14 @@
         </div>
         </div>
 
-        <div class="finish-footer"></div>
+        <div class="finish-footer">
+            <p>© 2024 Asana, Inc.</p>
+            <div>
+                <img src="Assets/Laptop-view/Wolrd-icon.png" alt=""><p> English</p>
+              
+            </div>
+            <p><a href="#">Terms</a>&<a href="#">Privacy</a></p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
